--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lodash": "~2.4.1",
     "lwip": "0.0.6",
     "method-override": "~2.3.0",
-    "mongoose": "~3.8.8",
+    "mongoose": "^3.8.28",
     "morgan": "~1.4.1",
     "multer": "0.1.6",
     "nodemailer": "~1.3.0",
