--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "forever": "~0.11.0",
     "glob": "~4.0.5",
     "grunt-cli": "~0.1.13",
+    "grunt-nodemon": "^0.4.0",
     "helmet": "~0.4.0",
     "imagemagick": "^0.1.3",
     "lodash": "~2.4.1",
@@ -64,7 +65,7 @@
     "grunt-ng-annotate": "~0.4.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-nodemon": "~0.3.0",
+    "grunt-nodemon": "~0.4.0",
     "grunt-concurrent": "~1.0.0",
     "grunt-mocha-test": "~0.12.1",
     "grunt-karma": "~0.9.0",
