--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meanjs",
   "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "private": false,
   "author": "https://github.com/meanjs/mean/graphs/contributors",
   "repository": {
@@ -33,13 +33,11 @@
     "forever": "~0.11.0",
     "glob": "~4.0.5",
     "grunt-cli": "~0.1.13",
-    "grunt-nodemon": "^0.4.0",
     "helmet": "~0.4.0",
-    "imagemagick": "^0.1.3",
     "lodash": "~2.4.1",
     "lwip": "0.0.6",
     "method-override": "~2.3.0",
-    "mongoose": "^3.8.28",
+    "mongoose": "~3.8.8",
     "morgan": "~1.4.1",
     "multer": "0.1.6",
     "nodemailer": "~1.3.0",
