--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meanjs",
   "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
-  "version": "0.4.3",
+  "version": "0.4.5",
   "private": false,
   "author": "https://github.com/meanjs/mean/graphs/contributors",
   "repository": {
@@ -33,8 +33,9 @@
     "forever": "~0.11.0",
     "glob": "~4.0.5",
     "grunt-cli": "~0.1.13",
-    "grunt-nodemon": "~0.4.0",
+    "grunt-nodemon": "^0.4.0",
     "helmet": "~0.4.0",
+    "imagemagick": "^0.1.3",
     "lodash": "~2.4.1",
     "lwip": "0.0.6",
     "method-override": "~2.3.0",
